--- a/events.html
+++ b/events.html
@@ -19,7 +19,7 @@
         <ul>
           <!--<li class="active"><a href="index.html"><span>Home</span></a></li>-->
 		  <li class="active"><a href="#"><span>Events</span></a></li>
-		  <li><a href="#"><span>People</span></a></li>
+		  <li><a href="people.html"><span>People</span></a></li>
           <li><a href="#"><span>Tech Partners</span></a></li>
           <li><a href="#"><span>Archives</span></a></li>
           <!--<li><a href="#"><span>Contact</span></a></li> -->
@@ -109,12 +109,12 @@
 	  <div class="sidebar">
         <div class="clr"></div>
         <div class="gadget">
-          <h2 class="star"><span>At A Glance</span></h2>
+          <h2 class="star"><span>Register</span></h2>
           <div class="clr"></div>
           <ul class="sb_menu">
             <li><a href="#">Chess</a></li>
             <li><a href="#">Sudoku</a></li>
-            <li><a href="#">Add Stuff</a></li>
+            <li><a href="#">Quiz</a></li>
           </ul>
         </div>
 	  </div>
