--- a/people.html
+++ b/people.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Konstruct 2k16</title>
+<title>People-Konstruct 2k16</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" type="text/css" href="css/coin-slider.css" />
@@ -19,7 +19,7 @@
         <ul>
           <!--<li class="active"><a href="index.html"><span>Home</span></a></li>-->
 		  <li><a href="events.html"><span>Events</span></a></li>
-		  <li><a href="people.html"><span>People</span></a></li>
+		  <li class="active"><a href="#"><span>People</span></a></li>
           <li><a href="#"><span>Tech Partners</span></a></li>
           <li><a href="#"><span>Archives</span></a></li>
           <!--<li><a href="#"><span>Contact</span></a></li> -->
@@ -44,12 +44,30 @@
           <!--<h2><span>About Us</span> </h2>-->
           
           <div class="clr"></div>
-          <div class="img"><img src="images/img3.jpg" width="200" height="200" alt="" class="fl" /></div>
           <div class="post_content">
-			<h1 align=center>Welcome To Konstruct 2016</h1>
-			<p align=center>Kolkata's First Open Source Fest is Back</p>
-			<p align=center>Presented By West Bengal University of Technology</p>
-			<h2 align=center><font>27th and 28th February</font></h2>
+			<h2 align=center><font>Organising Committee</font></h2>
+			<p align=left><img src="images/dk.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Dheeraj Khanna</p>
+			<p align=left><img src="images/rano.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Ranodeep Saha</p>
+			<p align=left><img src="images/psg.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Priyansu Ganguly</p>
+			<p align=left><img src="images/69.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Arkopal Ray</p>
+          </div>
+		  <div class="post_content">
+			<h2 align=center><font>Technical</font></h2>
+			<p align=left><img src="images/rnb.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Rudra Nil Basu</p>
+			<p align=left><img src="images/pg.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Pragyan Bhattacharyya</p>
+			<p align=left><img src="images/jit.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Biswajit Kundu</p>
+          </div>
+		  <div class="post_content">
+			<h2 align=center><font>Content</font></h2>
+			<p align=left><img src="images/dhar.jpg" width="300" height="327" alt="" /></p>
+			<p align=left>Samiksha Dhar</p>
           </div>
           <div class="clr"></div>
         </div>
@@ -58,13 +76,10 @@
 	  <div class="sidebar">
         <div class="clr"></div>
         <div class="gadget">
-          <h2 class="star"><span>At A Glance</span></h2>
+          <h2 class="star"><span>Event Managers</span></h2>
           <div class="clr"></div>
-          <ul class="sb_menu">
-            <li><a href="#">About WBUT</a></li>
-            <li><a href="#">About Konstruct</a></li>
-            <li><a href="#">What's New ?</a></li>
-          </ul>
+          <p align=left><img src="images/sagnik.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Sagnik Chatterjee</p>
         </div>
 	  </div>
       <div class="clr"></div>
@@ -85,7 +100,6 @@ Enjoy!</p>
 	<p align=center>The University which began its operation only with 30 colleges, now has strength of 217 colleges. The increase of Post Graduate courses and R&D activity has provided the University an edge advantage and helped the education arena to meet the gap of future Human Resource in Education. The University is continuously and effortlessly busy in up gradation of Education in West Bengal with the help of UGC, AICTE and State Government. In the last decade, WBUT being a Centre of Excellence for higher studies and research, engaged in National Building Exercise.</p> 
 	<p align=center>The basic objective of the University is to organize undergraduate and post graduate courses of study in Engineering, Technology & Management, also in emerging areas with a view to produce young scientists, technologists and managers of high caliber, capable of contributing towards development of the country.</p>
     -->
-	<h1 align=center class="star">Events</h1>
 	</div>	
   </div>
 
