--- a/people.html
+++ b/people.html
@@ -80,6 +80,22 @@
           <div class="clr"></div>
           <p align=left><img src="images/sagnik.jpg" width="250" height="327" alt="" /></p>
 			<p align=left>Sagnik Chatterjee</p>
+		  <p align=left><img src="images/sup.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Suparna Mondal</p>
+		  <p align=left><img src="images/nalin.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Nalin Shankar</p>
+		   <p align=left><img src="images/nishant.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Nishant Kumar</p>
+		   <p align=left><img src="images/pankaj.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Pankaj Kumar Shah</p>
+		  <h2 class="star"><span>Social Media</span></h2>
+          <div class="clr"></div>
+          <p align=left><img src="images/utsav.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Utsav Das</p>
+		  <p align=left><img src="images/adi.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Aditya Pratap</p>
+		  <p align=left><img src="images/cs.jpg" width="250" height="327" alt="" /></p>
+			<p align=left>Chaitali Sharma</p>
         </div>
 	  </div>
       <div class="clr"></div>
