Added Home Page Events

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		  <li><a href="events.html"><span>Events</span></a></li>
 		  <li><a href="people.html"><span>People</span></a></li>
           <li><a href="#"><span>Tech Partners</span></a></li>
-          <li><a href="#"><span>Archives</span></a></li>
+          <li><a target="_blank" href="https://2015.konstruct.wbut.ac.in"><span>Archives</span></a></li>
           <!--<li><a href="#"><span>Contact</span></a></li> -->
         </ul>
       </div>
       <div class="logo">
 		
-        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>WBUT</small></a></h1>
+        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>MAKAUT</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
@@ -61,7 +61,7 @@
           <h2 class="star"><span>At A Glance</span></h2>
           <div class="clr"></div>
           <ul class="sb_menu">
-            <li><a href="#">About WBUT</a></li>
+            <li><a target="_blank" href="https://en.wikipedia.org/wiki/Maulana_Abul_Kalam_Azad_University_of_Technology">About MAKAUT</a></li>
             <li><a href="#">About Konstruct</a></li>
             <li><a href="#">What's New ?</a></li>
           </ul>
@@ -86,6 +86,12 @@ Enjoy!</p>
 	<p align=center>The basic objective of the University is to organize undergraduate and post graduate courses of study in Engineering, Technology & Management, also in emerging areas with a view to produce young scientists, technologists and managers of high caliber, capable of contributing towards development of the country.</p>
     -->
 	<h1 align=center class="star">Events</h1>
+	<p align=center>For All Events and Timings, click <a target="_blank" href="events.html">here</a></p>
+	<p align=center><img src="images/ev1.jpg" width="1000px"></img></p>
+	<p align=center><img src="images/ev2.jpg" width="1000px"></img></p>
+	<p align=center><img src="images/ev3.jpg" width="1000px"></img></p>
+	<p align=center><img src="images/ev4.jpg" width="1000px"></img></p>
+	<p align=center><img src="images/ev5.jpg" width="1000px"></img></p>
 	</div>	
   </div>
 
