--- a/events.html
+++ b/events.html
@@ -21,13 +21,13 @@
 		  <li class="active"><a href="#"><span>Events</span></a></li>
 		  <li><a href="people.html"><span>People</span></a></li>
           <li><a href="#"><span>Tech Partners</span></a></li>
-          <li><a href="#"><span>Archives</span></a></li>
+          <li><a target="_blank" href="https://2015.konstruct.wbut.ac.in"><span>Archives</span></a></li>
           <!--<li><a href="#"><span>Contact</span></a></li> -->
         </ul>
       </div>
       <div class="logo">
 		
-        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>WBUT</small></a></h1>
+        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>MAKAUT</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
@@ -58,10 +58,10 @@
 			<p align=center><img src="images/connectindia.png" width="200" height="100" alt="" class="fl" /></p>
 			<p align=center>Blogging Workshop by Connect India</p>
 			<p align=center>Time : 11 am - 12 pm</p>
-			<p align=center><img src="images/ms.jpg" width="250" height="100" alt="" class="fl" /></p>
+			<p align=center><img src="images/ms.png" width="250" height="100" alt="" class="fl" /></p>
 			<p align=center>Tech Workshop on Open Source Tech by Mircrosoft Patnered Theorex</p>
 			<p align=center>Time : 11 am - 12 pm</p>
-			<p align=center><img src="images/mozilla.png" width="300" height="100" alt="" class="fl" /></p>
+			<p align=center><img src="images/mozilla.png" width="200" height="200" alt="" class="fl" /></p>
 			<p align=center>Mozilla Workshop</p>
 			<p align=center>Time : 3 pm - 5 pm</p>
 			<p align=center><img src="images/scrollback.png" width="200" height="200" alt="" class="fl" /></p>
@@ -75,7 +75,7 @@
 	  <div class="sidebar">
         <div class="clr"></div>
         <div class="gadget">
-          <h2 class="star"><span>At A Glance</span></h2>
+          <h2 class="star"><span>Register</span></h2>
           <div class="clr"></div>
           <ul class="sb_menu">
             <li><a href="#">Stuff</a></li>
