--- a/people.html
+++ b/people.html
@@ -21,13 +21,13 @@
 		  <li><a href="events.html"><span>Events</span></a></li>
 		  <li class="active"><a href="#"><span>People</span></a></li>
           <li><a href="#"><span>Tech Partners</span></a></li>
-          <li><a href="#"><span>Archives</span></a></li>
+          <li><a target="_blank" href="https://2015.konstruct.wbut.ac.in"><span>Archives</span></a></li>
           <!--<li><a href="#"><span>Contact</span></a></li> -->
         </ul>
       </div>
       <div class="logo">
 		
-        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>WBUT</small></a></h1>
+        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>MAKAUT</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
