--- a/events.html
+++ b/events.html
@@ -57,10 +57,10 @@
 			<p align=center>Time : 11 am - 12 pm</p>
 			<p align=center><img src="images/connectindia.png" width="200" height="100" alt="" class="fl" /></p>
 			<p align=center>Blogging Workshop by Connect India</p>
-			<p align=center>Time : 11 am - 12 pm</p>
+			<p align=center>Time : 12 pm - 2 pm</p>
 			<p align=center><img src="images/ms.png" width="250" height="100" alt="" class="fl" /></p>
 			<p align=center>Tech Workshop on Open Source Tech by Mircrosoft Patnered Theorex</p>
-			<p align=center>Time : 11 am - 12 pm</p>
+			<p align=center>Time : 12 pm - 2 pm</p>
 			<p align=center><img src="images/mozilla.png" width="200" height="200" alt="" class="fl" /></p>
 			<p align=center>Mozilla Workshop</p>
 			<p align=center>Time : 3 pm - 5 pm</p>
@@ -94,13 +94,20 @@
 			
 			<h2 align=center><font>28th February</font></h2>
 			<p align=center><img src="images/chess.jpg" width="200" height="200" alt="" class="fl" /></p>
-			<p align=center>Finals of Chess, Sudoku, Quiz</p>
-			<p align=center>Time : 10:00 am - 1:00 pm</p>
+			<p align=center>Chess and Sudoku</p>
+			<p align=center>Starts at 11:00 am</p>
+			<!--
 			<p align=center>"Just a Minute"</p>
 			<p align=center>Time : 12 pm - 3 pm</p>
+			-->
 			<p align=center><img src="images/ddg.png" width="200" height="200" alt="" class="fl" /></p>
 			<p align=center>Duck Duck Go Workshop</p>
-			<p align=center>Time : 11 am - 1 pm</p>
+			<p align=center>Starts at : 11 am</p>
+			<p align=center><img src="images/quiz.jpg" width="200" height="200" alt="" class="fl" /></p>
+			<p align=center>Quiz</p>
+			<p align=center>Starts at : 12 pm</p>
+			<p align=center>Jam and Poetry Slam</p>
+			<p align=center>Starts at : 1 pm</p>
           </div>
           <div class="clr"></div>
         </div>
