--- a/people.html
+++ b/people.html
@@ -31,7 +31,7 @@
       </div>
       <div class="clr"></div>
       <div class="slider">
-        <div id="coin-slider"> <a href="#"><img src="images/welcome.jpg" width="1500" height="327" alt="" /> </a> <!--<a href="#"><img src="images/slide2.jpg" width="1500" height="327" alt="" /> </a> <a href="#"><img src="images/slide3.jpg" width="1500" height="327" alt="" /> </a> --> </div> 
+        <div > <a href="#"><img src="images/welcome.jpg" width="1500" height="327" alt="" /> </a> <!--<a href="#"><img src="images/slide2.jpg" width="1500" height="327" alt="" /> </a> <a href="#"><img src="images/slide3.jpg" width="1500" height="327" alt="" /> </a> --> </div> 
         <div class="clr"></div>
       </div>
       <div class="clr"></div>
