Changed Header Style

--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
       </div>
       <div class="logo">
 		
-        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>MAKAUT</small></a></h1>
+        <h1 align=center><a href="index.html"><span> <img src="images/head2.png" width="250px"></img> <img src="images/img3.jpg" width="50px"></img> <img src="images/2016.png" width="100px"></img></span> <small>MAKAUT</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
