--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="logo">
 		
-        <h1 align=center><a href="index.html"><span>Konstruct <img src="images/img3.jpg" width="50px"></img> 2k16</span> <small>MAKAUT</small></a></h1>
+        <h1 align=center><a href="index.html"><span> <img src="images/head2.png" width="250px"></img> <img src="images/img3.jpg" width="50px"></img> <img src="images/2016.png" width="100px"></img></span> <small>MAKAUT</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="slider">
@@ -46,7 +46,7 @@
           <div class="clr"></div>
           <div class="img"><img src="images/img3.jpg" width="200" height="200" alt="" class="fl" /></div>
           <div class="post_content">
-			<h1 align=center>Welcome To Konstruct 2016</h1>
+			<h1 align=center>Welcome To <img src="images/head2.png" width="250px"></img><img src="images/2016.png" width="100px"></img></h1>
 			<p align=center>Kolkata's First Open Source Fest is Back</p>
 			<p align=center>Presented By West Bengal University of Technology</p>
 			<h2 align=center><font>27th and 28th February</font></h2>
@@ -85,7 +85,7 @@ Enjoy!</p>
 	<p align=center>The University which began its operation only with 30 colleges, now has strength of 217 colleges. The increase of Post Graduate courses and R&D activity has provided the University an edge advantage and helped the education arena to meet the gap of future Human Resource in Education. The University is continuously and effortlessly busy in up gradation of Education in West Bengal with the help of UGC, AICTE and State Government. In the last decade, WBUT being a Centre of Excellence for higher studies and research, engaged in National Building Exercise.</p> 
 	<p align=center>The basic objective of the University is to organize undergraduate and post graduate courses of study in Engineering, Technology & Management, also in emerging areas with a view to produce young scientists, technologists and managers of high caliber, capable of contributing towards development of the country.</p>
     -->
-	<h1 align=center class="star">Events</h1>
+	<h1 align=center class="star"><img src="images/events.png" width="200px"></img></h1>
 	<p align=center>For All Events and Timings, click <a target="_blank" href="events.html">here</a></p>
 	<p align=center><img src="images/ev1.jpg" width="1000px"></img></p>
 	<p align=center><img src="images/ev2.jpg" width="1000px"></img></p>
