--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function rotateAnimation(el,speed){
 	  </div>
       <div class="clr"></div>
       <div class="slider">
-        <div  <a href="#"><img src="images/welcome.jpg" width="1500" height="370" alt="" /> </a> <!--<a href="#"><img src="images/slide2.jpg" width="1500" height="327" alt="" /> </a> <a href="#"><img src="images/slide3.jpg" width="1500" height="327" alt="" /> </a> --> </div> 
+        <div  <a href="#"><img src="images/welcome.jpg" width="1500" height="370" alt="" class="img-responsive"/> </a> <!--<a href="#"><img src="images/slide2.jpg" width="1500" height="327" alt="" /> </a> <a href="#"><img src="images/slide3.jpg" width="1500" height="327" alt="" /> </a> --> </div> 
         
 		<div class="clr"></div>
       </div>
